--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-<!-- This is banner section -->
-<section>
-    <div class="banner-container">
-        <div class="banner-text">
+        <!-- This is banner section -->
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h2 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h2>
+                    <p class="banner-description">It is a long established fact that a reader will be distracted by the
+                        readable <br>
+                        content of a page when looking at its layout. The point of using Lorem Ipsum is <br>
+                        that it has a more-or-less normal distribution of letters.</p>
+                    <button class="primary-btn">Shop Now</button>
 
-        </div>
-        <div class="banner-image">
-            
-        </div>
-    </div>
-</section>
+                </div>
+                <div>
+                    <img class="banner-image" src="./Flower Asset/pngwing 10.png" alt="">
+
+                </div>
+
+            </div>
+        </section>
 
     </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
