our featured flower section done

--- a/index.html
+++ b/index.html
@@ -24,14 +24,43 @@
                 </div>
                 <div>
                     <img class="banner-image" src="./Flower Asset/pngwing 10.png" alt="">
-
                 </div>
-
             </div>
         </section>
 
     </header>
-    <main></main>
+    <main>
+        <!-- Our features part -->
+        <section class="features-container">
+            <div class="features-text">
+                <h2 class="features-title">Our Featured Flowers</h2>
+                <p class="features-description"> It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+            </div>
+            <div class="features-image-box">
+                <div class="box-1">
+                    <img class="features-image" src="./Flower Asset/pngwing 6.png" alt="">
+
+                </div>
+                <div class="box-2">
+                    <img class="features-image" src="./Flower Asset/pngwing 5.png" alt="">
+
+                </div>
+                <div class="box-3">
+                    <img class="features-image" src="./Flower Asset/pngwing 7.png" alt="">
+
+                </div>
+            </div>
+            <div class="image-caption">
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
+
+            </div>
+        </section>
+
+
+    </main>
     <footer></footer>
 </body>
 
