--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
             </div>
         </section>
 
+        <!-- delivery part start -->
+        <section>
+            <div class="delivery-container">
+                <div class="icon">
+                    <img class="icon-img" src="./Flower Asset/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div  class="icon">
+                    <img class="icon-img" src="./Flower Asset/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div  class="icon">
+                    <img class="icon-img" src="./Flower Asset/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+
+            </div>
+
+
+        </section>
+
 
     </main>
     <footer></footer>
