--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <section class="features-container">
             <div class="features-text">
                 <h2 class="features-title">Our Featured Flowers</h2>
-                <p class="features-description"> It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="features-description"> It is a long established fact that a reader will be distracted by the
+                    readable <br> content of a page when looking at its layout.</p>
 
             </div>
             <div class="features-image-box">
@@ -66,18 +67,34 @@
                     <img class="icon-img" src="./Flower Asset/Group 57.png" alt="">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
-                <div  class="icon">
+                <div class="icon">
                     <img class="icon-img" src="./Flower Asset/Group 58.png" alt="">
                     <p>Fresh Flowers. Local Growers.</p>
                 </div>
-                <div  class="icon">
+                <div class="icon">
                     <img class="icon-img" src="./Flower Asset/Group 59.png" alt="">
                     <p>24/7 Free Support.</p>
                 </div>
-
             </div>
+        </section>
+        <!-- Hot deal section  -->
+        <section>
+            <div class="deal-container">
+                <div class="deal-text">
+                    <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="color
+                        ">Off</span> </h2>
+                    <p class="deal-description">It is a long established fact that a reader will be distracted by the readable <br> <span style="margin-left : 120px;">content of a page when looking at its layout.</span></p>
+                    <div class="btn-2">
+                        <button class="primary-btn ">Sign Up</button>
+                    </div>
 
 
+                </div>
+                <div class="deal-image">
+                    <img class="deal-image-inside" src="./Flower Asset/pngwing 8.png" alt="">
+
+                </div>
+            </div>
         </section>
 
 
