instragram part added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 <div class="deal-text">
                     <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="color
                         ">Off</span> </h2>
-                    <p class="deal-description">It is a long established fact that a reader will be distracted by the readable <br> <span style="margin-left : 120px;">content of a page when looking at its layout.</span></p>
+                    <p class="deal-description">It is a long established fact that a reader will be distracted by the
+                        readable <br> <span style="margin-left : 120px;">content of a page when looking at its
+                            layout.</span></p>
                     <div class="btn-2">
                         <button class="primary-btn ">Sign Up</button>
                     </div>
@@ -95,6 +97,14 @@
 
                 </div>
             </div>
+        </section>
+        <!-- Instragram part start -->
+        <section class="instragram-container">
+            <h2 class="instragram-title">Instagram</h2>
+            <p class="instragram-description"> It is a long established fact that a reader will be distracted by the
+                readable <br> content of a page when looking at its layout.</p>
+
+
         </section>
 
 
