--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
             <h2 class="instragram-title">Instagram</h2>
             <p class="instragram-description"> It is a long established fact that a reader will be distracted by the
                 readable <br> content of a page when looking at its layout.</p>
-
+        </section>
+        <!-- Flowers section start -->
+        <section>
+            <div class="flowers-container">
+                <img class="flowers-image"  src="./Flower Asset/Flower 01.png" alt="">
+                <img class="flowers-image" src="./Flower Asset/Rectangle 4.png" alt="">
+                <img class="flowers-image" src="./Flower Asset/Rectangle 5.png" alt="">
+                <img class="flowers-image" src="./Flower Asset/Rectangle 6.png" alt="">
+            </div>
 
         </section>
 
