--- a/index.html
+++ b/index.html
@@ -107,14 +107,29 @@
         <!-- Flowers section start -->
         <section>
             <div class="flowers-container">
-                <img class="flowers-image"  src="./Flower Asset/Flower 01.png" alt="">
+                <img class="flowers-image" src="./Flower Asset/Flower 01.png" alt="">
                 <img class="flowers-image" src="./Flower Asset/Rectangle 4.png" alt="">
                 <img class="flowers-image" src="./Flower Asset/Rectangle 5.png" alt="">
                 <img class="flowers-image" src="./Flower Asset/Rectangle 6.png" alt="">
             </div>
-
         </section>
 
+        <!-- Latest deal section start -->
+
+        <div class="latest-container">
+            <div class="latest-text">
+                <h2 class="latest-title"> Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
+            </div>
+
+            <form class="form-container">
+                <input class="input-feild" type="text" placeholder="Enter your email here....">
+                <button class="secondary-btn
+                ">Subscribe</button>
+
+
+            </form>
+        </div>
 
     </main>
     <footer></footer>
