--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
                 </div>
             </div>
         </section>
+          <!-- special bonus section start -->
+          <section>
+            <div class="buy-container">
+                <div class="buy-text">
+                    <h2 class="buy-title">Buy Flower Buy Happiness</span></h2>
+                    <p class="buy-description">This is the trusted flower shop in bangladesh</p>       
+                    <p class="buy-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Facere expedita fugit, esse, consequatur rem optio ex quos cum sit minima error</p>             
+                </div>
+                <div class="buy-button">
+                    <button class="primary-btn btn-buy">Buy Now </button>
+                    <button class="primary-btn btn-buy" >Contact us</button>
+                </div>
+
+
+            </div>
+        </section>
         <!-- Instragram part start -->
         <section class="instragram-container">
             <h2 class="instragram-title">Instagram</h2>
@@ -130,9 +146,24 @@
 
             </form>
         </div>
+      
 
     </main>
-    <footer></footer>
+
+
+    <!-- footer section start -->
+    <footer class="footer-container">
+        <h2 class="footer-title"><span class="color-2">Flower</span>Shop
+        </h2>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable
+            <br> content of a page when
+            looking at its layout.</p>
+        <small class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </small>
+
+
+
+
+    </footer>
 </body>
 
 </html>
