--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
+    <!-- css link -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/ba7f993e34.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -107,8 +110,8 @@
                     <p class="buy-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Facere expedita fugit, esse, consequatur rem optio ex quos cum sit minima error</p>             
                 </div>
                 <div class="buy-button">
-                    <button class="primary-btn btn-buy">Buy Now </button>
-                    <button class="primary-btn btn-buy" >Contact us</button>
+                    <button class="primary-btn btn-buy"><i class="fa-sharp fa-solid fa-bag-shopping"></i> Buy Now </button>
+                    <button class="primary-btn btn-buy" ><i class="fa-sharp fa-solid fa-phone"></i>  Contact us</button>
                 </div>
 
 
