--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
                 </div>
             </div>
         </section>
-          <!-- special bonus section start -->
-          <section>
+        <!-- special bonus section start -->
+        <section>
             <div class="buy-container">
                 <div class="buy-text">
                     <h2 class="buy-title">Buy Flower Buy Happiness</span></h2>
-                    <p class="buy-description">This is the trusted flower shop in bangladesh</p>       
-                    <p class="buy-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Facere expedita fugit, esse, consequatur rem optio ex quos cum sit minima error</p>             
+                    <p class="buy-description">This is the trusted flower shop in bangladesh</p>
+                    <p class="buy-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Facere
+                        expedita fugit, esse, consequatur rem optio ex quos cum sit minima error</p>
                 </div>
                 <div class="buy-button">
-                    <button class="primary-btn btn-buy"><i class="fa-sharp fa-solid fa-bag-shopping"></i> Buy Now </button>
-                    <button class="primary-btn btn-buy" ><i class="fa-sharp fa-solid fa-phone"></i>  Contact us</button>
+                    <button class="primary-btn btn-buy"><i class="fa-sharp fa-solid fa-bag-shopping"></i> Buy Now
+                    </button>
+                    <button class="primary-btn btn-buy"><i class="fa-sharp fa-solid fa-phone"></i> Contact us</button>
                 </div>
 
 
@@ -149,7 +151,7 @@
 
             </form>
         </div>
-      
+
 
     </main>
 
@@ -160,7 +162,8 @@
         </h2>
         <p class="footer-description">It is a long established fact that a reader will be distracted by the readable
             <br> content of a page when
-            looking at its layout.</p>
+            looking at its layout.
+        </p>
         <small class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </small>
 
 
